flapivor/tests/m1/hopix/parser/good/41-external-definition-1.hopix
extern print_string : String -> Unit