flapivor/tests/m1/hopix/parser/bad/41-external-definition-1.hopix
extern print_string : 0